--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPay</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/logo5.png" />
+    <link rel="icon" type="image/x-icon" href="assets/img/photo_2024-10-20_17-36-39-removebg-preview.png" />
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.css">
 </head>
+
 <body>
     <header>
         <div class="header-row">
@@ -19,7 +21,17 @@
                     <li><a href=""> Personal</a></li>
                     <li><a href="">Business</a></li>
 
-                    <li><a href="">Company <i class="fa fa-angle-down"></i></a></li>
+                    <li><a href="">Company <i class="fa fa-angle-down"></i>
+                            
+
+                        <div class="dropdown">
+                            <!-- <div class="about">
+                                <a href="">About</a>
+                            </div>
+                            <p>Contact</p> -->
+                        </div>
+                        </a>
+                    </li>
 
                     <li><a href="">CSR</a></li>
 
@@ -28,7 +40,11 @@
         </div>
     </header>
     <div class="container">
-        
+
+        <div class="row">
+
+        </div>
     </div>
 </body>
+
 </html>
