--- a/index.html
+++ b/index.html
@@ -40,9 +40,32 @@
         </div>
     </header>
     <div class="container">
-
         <div class="row">
-
+            <div class="text1">
+                <h1>We are Beyond Banking</h1>
+                <p>With mission to make financial services more inclusive through technology, OPay is dedicated to providing secure, easy to use & affordable financial services with super fast user experience, amazing incentive package on transfer/airtime & data top-up, innovative product to use as balance with amazing daily interest, reliable debit card with no charge and best resolution experience etc. With OPay account, you can have full control of your finances, payments & transactions with ease, all on one platform! Yes, OPay is your one-stop payment services platform and more.</p>
+            </div>
+            <div class="cbn">
+                Liscenced by CBN | Insured by  | 
+                <div class="ndic">NDIC</div>
+            </div>
+        </div>
+        <div class="row2">
+            <div class="slide1">
+                <img src="assets/img/slide-img-1.png" alt="">
+            </div>
+            <div class="slide2">
+                <img src="assets/img/slide-img-2.png" alt="">
+            </div>
+            <div class="slide3">
+                <img src="assets/img/slide-img-6.png" alt="">
+            </div>
+            <div class="slide4">
+                <img src="assets/img/slide-img-4.png" alt="">
+            </div>
+            <div class="slide5">
+                <img src="assets/img/slide-img-5.png" alt="">
+            </div>
         </div>
     </div>
 </body>
