--- a/index.html
+++ b/index.html
@@ -22,14 +22,22 @@
                     <li><a href="">Business</a></li>
 
                     <li><a href="">Company <i class="fa fa-angle-down"></i>
-                            
 
-                        <div class="dropdown">
-                            <!-- <div class="about">
-                                <a href="">About</a>
+
+                            <div class="dropdown">
+                                <!-- <a href="">About us</a> -->
+                                <div class="about">
+                                    <form action="about.html" method="post">
+                                        <input type="submit" value="About us">
+                                    </form>
+                                    <!-- <a href="">abut us</a> -->
+                                </div>
+                                <div class="contact">
+                                    <form action="about.html">
+                                        <input type="submit" value="Contact us">
+                                    </form>
+                                </div>
                             </div>
-                            <p>Contact</p> -->
-                        </div>
                         </a>
                     </li>
 
@@ -43,31 +51,98 @@
         <div class="row">
             <div class="text1">
                 <h1>We are Beyond Banking</h1>
-                <p>With mission to make financial services more inclusive through technology, OPay is dedicated to providing secure, easy to use & affordable financial services with super fast user experience, amazing incentive package on transfer/airtime & data top-up, innovative product to use as balance with amazing daily interest, reliable debit card with no charge and best resolution experience etc. With OPay account, you can have full control of your finances, payments & transactions with ease, all on one platform! Yes, OPay is your one-stop payment services platform and more.</p>
+                <p>With mission to make financial services more inclusive through technology, OPay is dedicated to
+                    providing secure, easy to use & affordable financial services with super fast user experience,
+                    amazing incentive package on transfer/airtime & data top-up, innovative product to use as balance
+                    with amazing daily interest, reliable debit card with no charge and best resolution experience etc.
+                    With OPay account, you can have full control of your finances, payments & transactions with ease,
+                    all on one platform! Yes, OPay is your one-stop payment services platform and more.</p>
             </div>
             <div class="cbn">
-                Liscenced by CBN | Insured by  | 
-                <div class="ndic">NDIC</div>
+                <img src="assets/img/cbn.png" alt="">
             </div>
         </div>
         <div class="row2">
             <div class="slide1">
                 <img src="assets/img/slide-img-1.png" alt="">
+                <div class="write">
+                    <i class="fa fa-user-circle fa-2x"></i>
+                    <h5>Easy Account Opening</h5>
+                    <p>Instant Account opening with amazing <br>welcome bonus</p>
+                </div>
             </div>
             <div class="slide2">
                 <img src="assets/img/slide-img-2.png" alt="">
+                <div class="write">
+                    <i class="fa fa-exchange-alt fa-2x"></i>
+                    <h5>Instant Transfer</h5>
+                    <p>Instant transfer with 100% successful rate to <br>all banks in Nigerian anytime</p>
+                </div>
             </div>
             <div class="slide3">
                 <img src="assets/img/slide-img-6.png" alt="">
+                <div class="write">
+                    <i class="fa fa-star-half-alt fa-2x"></i>
+                    <h5>Airtime/Data Top-up with Cahback</h5>
+                    <p>Up to 6% instant cashback on airtime/data top- <br>up every time</p>
+                </div>
             </div>
             <div class="slide4">
                 <img src="assets/img/slide-img-4.png" alt="">
+                <div class="write">
+                    <i class="fa fa-id-card fa-2x"></i>
+                    <h5>Instant and Free Debit Card</h5>
+                    <p>Apply and get a free card instantly at select Opay <br>agents or apply via the Opay App. Enjoy 10
+                        free ATM wthdrawals monthly and zero <br>maintenance fee</p>
+                </div>
             </div>
             <div class="slide5">
                 <img src="assets/img/slide-img-5.png" alt="">
+                <div class="write">
+                    <i class="fa fa-money-bill fa-2x"></i>
+                    <h5>Oweath with amazing daily interest</h5>
+                    <p>Owealth use as balance with amazing daily <br>interest</p>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="ourservices">
+            Our Services
+        </div>
+        <div class="row3">
+            <div class="fund">
+                <h1>Fund your Account, Make Transfers, Pay Bills</h1>
+                <div class="live">
+                    <p>Live life on your own terms! Add money to your OPay wallet and transfer to other bank accounts
+                        for free. Enjoy bonuses on airtime & data top-ups and fast bill payments at no extra charge.</p>
+                </div>
+            </div>
+            <div class="ourservicepic">
+                <img src="assets/img/OurServices01.jpg" alt="">
+            </div>
+        </div>
+        <div class="row4">
+            <div class="ourservicepic2">
+                <img src="assets/img/OurServices02.jpg" alt="">
+            </div>
+            <div class="opaydebitcard">
+                <h1>OPay Debit Cards,<br>Your Passport To The World</h1>
+                <div class="get">
+                    <p>Get your OPay Debit card at select OPay agent stores instantly or apply on the OPay App and enjoy 10 free ATM withdrawals monthly and zero card maintenance fees. The OPay debit card is accepted at any ATM or POS or web.</p>
+                </div>    
+            </div>
+        </div>
+        <div class="row5">
+            <div class="owealth">
+                <h2>Owealth</h2>
+                <div class="with">
+                    <p>With Owealth, you can get amazing daily interest on your funds while having full access and <br> control of the money. Make transactions at any time without affecting your interest! <br> Powered by BlueRidge Microfinance Bank</p>
+                </div>
+                <div class="ourservicepic3">
+                    <img src="assets/img/OurServices03.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        </div>
 </body>
 
 </html>
