nav bar modified for mobile view

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="assets/img/photo_2024-10-20_17-36-39-removebg-preview.png" />
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.css">
+    <link rel="stylesheet" href="assets/media.css">
 </head>
 
 <body>
@@ -45,6 +46,11 @@
 
                 </ul>
             </div>
+            <!-- navigation button to displayed only on mobile screen -->
+            <button><i class="fa fa-bars fa-2x"></i>
+
+            </button>
+           
         </div>
     </header>
     <div class="container">
@@ -140,11 +146,11 @@
                     <p>With Owealth, you can get amazing daily interest on your funds while having full access and <br>
                         control of the money. Make transactions at any time without affecting your interest! <br>
                         Powered by BlueRidge Microfinance Bank</p>
-             </div>
                 </div>
-                <div class="ourservicepic3">
-                    <img src="assets/img/OurServices03.jpg" alt="">
-                </div>
+            </div>
+            <div class="ourservicepic3">
+                <img src="assets/img/OurServices03.jpg" alt="">
+            </div>
         </div>
         <div class="row6">
             <div class="col">
@@ -185,8 +191,8 @@
             </div>
             <div class="col2">
                 <div class="priority">
-                    <h1><b>Your Security and Privacy <br> 
-                        is our priority</b></h1>
+                    <h1><b>Your Security and Privacy <br>
+                            is our priority</b></h1>
                 </div>
                 <div class="advance">
                     <h2>Advanced Fraud Detection</h2>
@@ -209,7 +215,7 @@
             <div class="col1">
                 <div class="customer">
                     <h1>Customer Satisfaction, Our <br>
-                    Priority</h1>
+                        Priority</h1>
                 </div>
                 <div class="we">
                     <p>we are here for you to provide 7*24 quick customer <br>
